@startuml

title __CLIENT's Class Diagram__\n

  namespace client.client {
    class client.client.NetClient {
        - UDP_PORT : int
        - ds : DatagramSocket
        - serverIP : String
        - serverUDPPort : int
        + NetClient()
        + connect()
        + send()
        + setUDP_PORT()
    }
  }
  

  namespace client.client {
    class client.client.NetClient.UDPThread {
        ~ buf : byte[]
        + run()
        - parse()
    }
  }
  

  namespace client.client {
    class client.client.TankClient {
        {static} + GAME_HEIGHT : int
        {static} + GAME_WIDTH : int
        {static} + hitCount : int
        {static} + missilesCount : int
        {static} ~ font : Font
        {static} ~ missileImage : Image
        {static} ~ tankImage : Image
        - explodes : List<Explode>
        - missiles : List<Missile>
        - obstacles : List<Obstacle>
        - offScreenImage : Image
        - tanks : List<Tank>
        {static} - tk : Toolkit
        + getExplodes()
        + getMissiles()
        + getMyTank()
        + getNc()
        + getObstacles()
        + getTanks()
        + launchFrame()
        {static} + main()
        + paint()
        + setExplodes()
        + setMissiles()
        + setMyTank()
        + setNc()
        + setTanks()
        + update()
        ~ drawMenu()
    }
  }
  

  namespace client.client {
    class client.client.TankClient.ConDialog {
        ~ b : Button
        ~ tfIP : TextField
        ~ tfMyUDPPort : TextField
        ~ tfPort : TextField
        + ConDialog()
    }
  }
  

  namespace client.client {
    class client.client.TankClient.KeyMonitor {
        + keyPressed()
        + keyReleased()
    }
  }
  

  namespace client.client {
    class client.client.TankClient.PaintThread {
        + run()
    }
  }
  

  client.client.NetClient o-- client.client.TankClient : tc
  client.client.NetClient +-down- client.client.NetClient.UDPThread
  client.client.NetClient.UDPThread .up.|> java.lang.Runnable
  client.client.TankClient -up-|> java.awt.Frame
  client.client.TankClient o-- client.client.TankClient.ConDialog : dialog
  client.client.TankClient o-- client.bean.Tank : myTank
  client.client.TankClient o-- client.client.NetClient : nc
  client.client.TankClient +-down- client.client.TankClient.ConDialog
  client.client.TankClient +-down- client.client.TankClient.KeyMonitor
  client.client.TankClient +-down- client.client.TankClient.PaintThread
  client.client.TankClient.ConDialog -up-|> java.awt.Dialog
  client.client.TankClient.KeyMonitor -up-|> java.awt.event.KeyAdapter
  client.client.TankClient.PaintThread .up.|> java.lang.Runnable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
